Fixed spacing in footer icons , Replaced Facebook and Twitter icon images with Font Awesome icons #912.

--- a/web-app/css/core.css
+++ b/web-app/css/core.css
@@ -86,3 +86,9 @@
 	background-color: #f14a42 !important;
 	color: white !important;
 }
+
+/* http://stackoverflow.com/a/11395372 */
+.no-whitespace {
+	line-height: 0;
+	font-size: 0;
+}
